
  HCAT-370 Create a HiveMetaStoreClient cache in hcatalog (amalakar via toffer) 

  HCAT-419 Java APIs for HCatalog DDL commands (avandana via toffer)

  HCAT-328 HCatLoader should report its input size so pig can estimate the number of reducers (traviscrawford via gates)
  
  HCAT-427 Document storage-based authorization (lefty via gates)

  IMPROVEMENTS
  HCAT-538 HCatalogStorer fails for 100GB of data with dynamic partitioning, number of partition is 300 (amalakar via toffer)

  HCAT-492 Document CTAS workaround for Hive with JSON serde (lefty via khorgath)

  HCAT-389 hcat_ping (script to check if HCatalog server is running/reachable) (mithun via khorgath)

  HCAT-432 Add findbugs to build (rohini via avandana)

  HCAT-424 Code cleanup of tabs (khorgath)

  HCAT-331 Update HCatalog to junit 4 (traviscrawford via khorgath)

  HCAT-414 More HCat e2e tests (khorgath via gates)

  HCAT-374 Add HCatBaseTest and one example usage (traviscrawford via gates)

  HCAT-390 Add e2e test for Hive with different file formats in different partitions (daijy via gates)

  HCAT-368 Documentation improvements: doc set & API docs (lefty via gates)

  HCAT-387 Trunk should point to 0.10 snapshot to match hive trunk (toffer)

  HCAT-329 HCatalog build fails with pig 0.9 (traviscrawford via hashutosh)

  HCAT-233 gitignore file (enis via gates)

  OPTIMIZATIONS

  BUG FIXES
  HCAT-513  Data Store onto HCatalog table fails for dynamic partitioning as the temporary directory gets deleted by the completed map tasks (amalakar via toffer)

  HCAT-490 HCatStorer() throws error when the same partition key is present in records in more than one tasks running as part of the same job (amalakar via toffer)

  HCAT-494 MultiOutputFormat in 0.23 fails to setAliasConf() correctly. (mithun via toffer)

  HCAT-507 e2e harness failing on 0.23 (toffer)

  HCAT-499 Multiple store commands does not work with Hadoop23 (rohinip via avandana)
